<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FlightBooking</string>
    <string name="val">Multiplied value</string>
    <string name="action_settings">Settings</string>
    <string name="res">Result</string>
    <string name="multiply">Multiply</string>
    <string name="comment">Comment</string>
    <string name="labelFrom">From</string>
    <string name="labelTo">To</string>
    <string name="labelFlyOut">Fly out</string>
    <string name="labelReturn">Return</string>
    <string name="radioOneWay">One way</string>
    <string name="radioReturn">Return</string>
    
	<string-array name="airports_array">
	    <item> </item>
        <item>CDG</item>
        <item>FRA</item>
        <item>DEL</item>
        <item>NRT</item>
        <item>ATL</item>
        <item>JFK</item>
    </string-array>
    

</resources>
