<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txFrom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".20"
            android:text="@string/labelFrom"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Spinner
            android:id="@+id/from_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".80" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txTo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".20"
            android:text="@string/labelTo"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Spinner
            android:id="@+id/to_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".80" />
    </LinearLayout>
    
	<RadioGroup
	    android:id="@+id/radioGroupOneWayReturn"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation='horizontal' >
	
	    <RadioButton
	        android:id="@+id/radioOneWay"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:checked="true"
	        android:text="@string/radioOneWay" />
	
	    <RadioButton
	        android:id="@+id/radioReturn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/radioReturn" />
	</RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewFlyOut"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".20"
            android:text="@string/labelFlyOut"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/editTextFlyOut"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".80"
            android:ems="10" >

            <requestFocus />
        </EditText>
    </LinearLayout>
    

    <LinearLayout
        android:id="@+id/linearLayoutReturnDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewReturn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".20"
            android:text="@string/labelReturn"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/editTextReturn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".80"
            android:ems="10" />
    </LinearLayout>


</LinearLayout>